feat: 添加资讯管理功能
- 添加文章管理基础CRUD功能
- 实现文章置顶和隐藏功能
- 添加公众号文章一键采集功能
- 支持外部链接跳转
- 优化图片上传和压缩功能
- 修复构建配置问题
  - 更新 webpack 配置
  - 修复路径别名配置
  - 更新 Netlify 部署配置

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,12 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  NEXT_USE_NETLIFY_EDGE = "1"
+  NODE_VERSION = "18"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-[build.environment]
-  NEXT_USE_NETLIFY_EDGE = "true"
-  NODE_VERSION = "18" 
+[functions]
+  node_bundler = "esbuild" 
