chore: 优化 Netlify 部署配置
1. 优化构建配置
- 修改 next.config.js 支持 Netlify 部署
- 禁用图片优化以支持 Netlify
- 使用独立输出模式

2. 更新部署配置
- 更新 netlify.toml 配置
- 添加 .nvmrc 指定 Node 版本
- 添加 .env.production 环境变量
- 添加 public/_redirects 处理客户端路由

3. 优化中间件
- 优化路由处理逻辑
- 添加静态文件处理
- 更新路由匹配规则

4. 其他优化
- 移除 turbopack
- 添加安全相关的 headers 配置
- 优化重定向规则

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,29 @@
 [build]
   command = "npm run build"
   publish = ".next"
-
-[build.environment]
-  NEXT_USE_NETLIFY_EDGE = "1"
-  NODE_VERSION = "18"
+  environment = { NODE_VERSION = "18" }
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  NEXT_USE_NETLIFY_EDGE = "true"
+  NEXT_TELEMETRY_DISABLED = "1"
+
+# 添加重定向规则
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# 添加 headers 配置
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
 
 [functions]
   node_bundler = "esbuild" 
