--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "react-hooks/exhaustive-deps": "warn",
     "@next/next/no-img-element": "warn",
     "react/no-unknown-property": "off",
-    "@next/next/no-server-import-in-page": "off"
+    "@next/next/no-server-import-in-page": "off",
+    "no-unused-vars": "warn",
+    "no-console": ["warn", { "allow": ["warn", "error"] }]
   }
 }
