fix: 修复Netlify部署新建会员错误问题 - 创建Netlify专用数据库连接配置 - 修复会员创建API移除next-auth依赖冲突 - 添加数据库连接诊断工具 - 更新Netlify配置和环境变量 - 改进前端错误处理提供更友好提示

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,31 @@
+# Netlify配置 - 自动生成
 [build]
-  command = "npm run build"
   publish = ".next"
-
-[build.environment]
-  NODE_VERSION = "18"
-  NEXT_USE_NETLIFY_EDGE = "true"
-  NEXT_TELEMETRY_DISABLED = "1"
+  command = "npm run build"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# 为静态资源添加特定的处理规则
+[build.environment]
+  # 为Netlify Functions设置环境变量
+  DB_HOST = "8.149.244.105"
+  DB_PORT = "3306"
+  DB_USER = "h5_cloud_user"
+  DB_PASSWORD = "mc72TNcMmy6HCybH"
+  DB_NAME = "h5_cloud_db"
+  JWT_SECRET = "sn8we6nRudHjsDnso7h3Qzpr5Pax8Jwe"
+
+# Netlify Functions配置
+[functions]
+  directory = ".netlify/functions"
+  node_bundler = "esbuild"
+
+# API函数特殊配置
+[[functions]]
+  path = "/api/*"
+  included_files = ["lib/**", "components/**"]
+
+# 静态资源处理规则
 [[redirects]]
   from = "/logo.svg"
   to = "/logo.svg"
@@ -18,14 +33,19 @@
   force = true
 
 [[redirects]]
-  from = "/public/*"
+  from = "/*.svg"
   to = "/:splat"
   status = 200
 
-# 修改为支持Next.js的重定向规则
 [[redirects]]
   from = "/_next/*"
   to = "/_next/:splat"
+  status = 200
+
+# API路由重定向
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
 
 [[redirects]]
@@ -33,19 +53,16 @@
   to = "/index.html"
   status = 200
   
-# 添加 headers 配置
+# 缓存配置
 [[headers]]
   for = "/*.svg"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
-    
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
 
-[functions]
-  node_bundler = "esbuild" 
+# API函数的CORS配置
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
