修复Netlify部署环境下的登录重定向问题 - 优化cookie设置，针对Netlify环境调整secure和sameSite属性 - 改进Netlify重定向配置，确保API路由不被干扰 - 增强中间件CORS处理，支持跨域cookie - 添加详细的调试日志，便于排查部署问题

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,14 @@
   DB_PASSWORD = "mc72TNcMmy6HCybH"
   DB_NAME = "h5_cloud_db"
   JWT_SECRET = "sn8we6nRudHjsDnso7h3Qzpr5Pax8Jwe"
+  NETLIFY = "true"
+
+# API路由优先处理 - 不进行重定向
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = false
 
 # 静态资源处理规则
 [[redirects]]
@@ -32,10 +40,12 @@
   to = "/_next/:splat"
   status = 200
 
+# SPA路由处理 - 放在最后，且不强制执行
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
   
 # 缓存配置
 [[headers]]
@@ -43,10 +53,11 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
-# API函数的CORS配置
+# API函数的CORS和Cookie配置
 [[headers]]
   for = "/api/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Headers = "Content-Type, Authorization, Cookie"
+    Access-Control-Allow-Credentials = "true"
