--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,13 @@
-# Netlify配置
+# Netlify配置 for Next.js
 [build]
-  publish = ".next"
   command = "npm run build"
+  publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
-  # 为Netlify Functions设置环境变量
+  # 数据库环境变量
   DB_HOST = "8.149.244.105"
   DB_PORT = "3306"
   DB_USER = "h5_cloud_user"
@@ -15,49 +15,3 @@
   DB_NAME = "h5_cloud_db"
   JWT_SECRET = "sn8we6nRudHjsDnso7h3Qzpr5Pax8Jwe"
   NETLIFY = "true"
-
-# API路由优先处理 - 不进行重定向
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-  force = false
-
-# 静态资源处理规则
-[[redirects]]
-  from = "/logo.svg"
-  to = "/logo.svg"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/*.svg"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/_next/*"
-  to = "/_next/:splat"
-  status = 200
-
-# SPA路由处理 - 放在最后，且不强制执行
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = false
-  
-# 缓存配置
-[[headers]]
-  for = "/*.svg"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# API函数的CORS和Cookie配置
-[[headers]]
-  for = "/api/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization, Cookie"
-    Access-Control-Allow-Credentials = "true"
