--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.7.9",
     "bcrypt": "^6.0.0",
     "cheerio": "^1.0.0",
@@ -67,6 +68,7 @@
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
