feat: 实现企业微信通知系统数据库监控功能
- 新增数据库触发器监控会员注册
- 添加通知队列处理机制
- 实现手动检查API作为备用方案
- 增加监控脚本支持多种运行模式
- 添加部署脚本自动化安装
- 提供权限问题解决方案文档
- 支持用户端直接注册的企业微信通知

--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "optimize:components": "node scripts/analyze-component-render.js",
     "optimize:lazy-load": "ts-node scripts/detect-lazy-load-candidates.ts",
     "deploy": "npm run build && node scripts/fix-netlify-deploy.js",
-    "deploy:netlify": "npm run build && node scripts/fix-netlify-deploy.js"
+    "deploy:netlify": "npm run build && node scripts/fix-netlify-deploy.js",
+    "monitor:queue": "node scripts/monitor-notification-queue.js",
+    "monitor:queue:daemon": "node scripts/monitor-notification-queue.js --daemon",
+    "monitor:queue:manual": "node scripts/monitor-notification-queue.js --manual",
+    "monitor:queue:debug": "node scripts/monitor-notification-queue.js --debug"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
