feat: 优化企业微信会员查询功能
- 增强智能编号识别算法，支持更多格式
- 优化数据库连接，统一使用executeQuery函数
- 新增配置检查接口 /api/wecom/config-check
- 新增状态监控接口 /api/wecom/status
- 增强测试查询接口 /api/wecom/test-query
- 改进会员信息展示，增加年龄计算和手机号脱敏
- 优化用户体验，更友好的错误提示和帮助信息
- 新增配置检查脚本和测试脚本
- 更新README文档，完善企业微信配置指南
- 修复结算页面数据库连接问题

--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "monitor:queue": "node scripts/monitor-notification-queue.js",
     "monitor:queue:daemon": "node scripts/monitor-notification-queue.js --daemon",
     "monitor:queue:manual": "node scripts/monitor-notification-queue.js --manual",
-    "monitor:queue:debug": "node scripts/monitor-notification-queue.js --debug"
+    "monitor:queue:debug": "node scripts/monitor-notification-queue.js --debug",
+    "test:wecom": "node scripts/test-wecom-query.js",
+    "test:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-query.js",
+    "check:wecom": "node scripts/check-wecom-config.js",
+    "check:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/check-wecom-config.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
