fix: 修复企业微信URL验证问题
- 修复企业微信URL验证签名算法
- 新增专门的URL验证函数verifyWecomURL
- 新增URL验证测试脚本scripts/test-wecom-verify.js
- 测试验证本地和生产环境URL验证功能正常
- 确保企业微信后台可以成功验证回调URL

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "test:wecom": "node scripts/test-wecom-query.js",
     "test:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-query.js",
     "check:wecom": "node scripts/check-wecom-config.js",
-    "check:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/check-wecom-config.js"
+    "check:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/check-wecom-config.js",
+    "test:wecom-verify": "node scripts/test-wecom-verify.js",
+    "test:wecom-verify:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-verify.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
