fix: 更新企业微信Token配置
- 添加数据库token和encoding_aes_key字段
- 更新Token为AYJtHyibFqZzUJ6Gdn6jr
- 更新EncodingAESKey为W4Vd1DVgpG1r15PVTPHP94zEkjh8bnsWOnFBz4O8N2k
- 修改代码从数据库读取Token而不是硬编码
- 更新测试脚本使用新的Token
- 新增配置管理脚本支持Token和EncodingAESKey更新

--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "check:wecom": "node scripts/check-wecom-config.js",
     "check:wecom:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/check-wecom-config.js",
     "test:wecom-verify": "node scripts/test-wecom-verify.js",
-    "test:wecom-verify:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-verify.js"
+    "test:wecom-verify:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-verify.js",
+    "wecom:config:show": "node scripts/update-wecom-config.js show",
+    "wecom:config:update:token": "node scripts/update-wecom-config.js token",
+    "wecom:config:update:encoding": "node scripts/update-wecom-config.js encoding"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
