feat: 数据库备份问题修复和系统优化
- 修复宝塔面板数据库备份view_user_members视图问题
- 添加数据库备份修复脚本和文档
- 优化用户管理列表，重新添加状态列显示
- 更新用户状态处理脚本
- 完善phpMyAdmin配置修复功能
- 统一数据库连接使用executeQuery
- 增强企业微信集成功能
- 添加多个实用脚本和文档

--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "test:wecom-verify:prod": "TEST_BASE_URL=https://admin.xinghun.info node scripts/test-wecom-verify.js",
     "wecom:config:show": "node scripts/update-wecom-config.js show",
     "wecom:config:update:token": "node scripts/update-wecom-config.js token",
-    "wecom:config:update:encoding": "node scripts/update-wecom-config.js encoding"
+    "wecom:config:update:encoding": "node scripts/update-wecom-config.js encoding",
+    "users:update-status": "node scripts/update-user-status.js",
+    "fix:phpmyadmin": "node scripts/fix-phpmyadmin-tempdir.js",
+    "setup:phpmyadmin": "node scripts/setup-phpmyadmin-pmadb.js",
+    "fix:phpmyadmin:complete": "node scripts/fix-phpmyadmin-complete.js",
+    "fix:database-backup": "node scripts/fix-database-backup.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
