feat: 新增iOS推送通知功能
- 集成Apple Push Notification Service (APNs)
- 新增公告推送和系统通知推送功能
- 新增推送日志查看和配置检查页面
- 新增设备令牌注册API
- 更新环境变量配置模板
- 添加推送功能说明文档

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "fix:phpmyadmin": "node scripts/fix-phpmyadmin-tempdir.js",
     "setup:phpmyadmin": "node scripts/setup-phpmyadmin-pmadb.js",
     "fix:phpmyadmin:complete": "node scripts/fix-phpmyadmin-complete.js",
-    "fix:database-backup": "node scripts/fix-database-backup.js"
+    "fix:database-backup": "node scripts/fix-database-backup.js",
+    "setup:push-tables": "node scripts/setup-push-tables.js",
+    "test:push-api": "node scripts/test-push-api.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
