--- a/package.json
+++ b/package.json
@@ -89,10 +89,12 @@
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "puppeteer": "^23.11.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-signature-canvas": "^1.0.7",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
