--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "react-hook-form": "^7.54.2",
     "react-signature-canvas": "^1.0.7",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zod": "^3.24.1"
@@ -106,6 +106,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-signature-canvas": "^1.0.7",
     "@types/uuid": "^10.0.0",
     "chalk": "^5.4.1",
     "compression-webpack-plugin": "^11.1.0",
