--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^23.11.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
