feat: 优化合同系统功能
- 修复线上环境localhost问题，添加NEXT_PUBLIC_BASE_URL配置
- 新增合同金额字段显示，支持动态计算和中文大写
- 使用正规人民币大写汉字（零、壹、贰、叁、肆、伍、陆、柒、捌、玖、拾、佰、仟、万、亿）
- 新增补充信息输入框，支持优惠说明等补充内容
- 优化合同模板，在第八条后添加补充说明章节
- 添加环境配置脚本和部署工具

--- a/env.template
+++ b/env.template
@@ -15,6 +15,9 @@ JWT_SECRET=sn8we6nRudHjsDnso7h3Qzpr5Pax8Jwe
 # 服务器配置
 SERVER_URL=http://8.149.244.105:8888/
 
+# 前端基础URL配置（用于生成签署链接等）
+NEXT_PUBLIC_BASE_URL=https://admin.xinghun.info
+
 # iOS推送通知配置 (APNs)
 APNS_KEY_ID=FVJGPT3N75
 APNS_TEAM_ID=V55YBFHJXZ
