feat: support wechat qrcode asset base url

--- a/env.template
+++ b/env.template
@@ -14,6 +14,8 @@ JWT_SECRET=sn8we6nRudHjsDnso7h3Qzpr5Pax8Jwe
 
 # 服务器配置
 SERVER_URL=http://121.41.65.220:8888/
+NEXT_PUBLIC_SERVER_URL=http://api.xinghun.info
+NEXT_PUBLIC_ASSET_BASE_URL=http://api.xinghun.info
 
 # 前端基础URL配置（用于生成签署链接等）
 NEXT_PUBLIC_BASE_URL=https://admin.xinghun.info
