--- a/package.json
+++ b/package.json
@@ -121,5 +121,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "webpack-bundle-analyzer": "^4.10.2"
+  },
+  "optionalDependencies": {
+    "@next/swc-darwin-arm64": "^16.0.4"
   }
 }
