添加支付宝API自动对接功能
1. 创建API同步接口（/api/finance/alipay/sync）
   - 支持定时调用支付宝API获取对账单
   - 自动解析并导入到收入管理

2. 创建回调通知接口（/api/finance/alipay/notify）
   - 接收支付宝实时收款通知
   - 自动创建收入记录

3. 创建定时同步脚本（scripts/sync-alipay-transactions.js）
   - 支持cron定时任务
   - 自动同步昨天的收款数据

4. 添加使用文档（docs/alipay-api-integration.md）
   - 定时任务方案（推荐）
   - 回调通知方案（实时）
   - 配置说明和使用方法

功能特点：
- 无需手动上传CSV，完全自动化
- 支持定时同步和实时回调两种方式
- 自动匹配会员并创建收入记录

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "fix:phpmyadmin:complete": "node scripts/fix-phpmyadmin-complete.js",
     "fix:database-backup": "node scripts/fix-database-backup.js",
     "setup:push-tables": "node scripts/setup-push-tables.js",
-    "test:push-api": "node scripts/test-push-api.js"
+    "test:push-api": "node scripts/test-push-api.js",
+    "alipay:sync": "node scripts/sync-alipay-transactions.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
