--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@google-cloud/local-auth": "^3.0.0",
+    "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
