--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "alipay:sync": "node scripts/sync-alipay-transactions.js"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -81,6 +82,7 @@
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.474.0",
@@ -101,9 +103,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "zod": "^3.24.1",
-    "@google-cloud/local-auth": "^3.0.0",
-    "googleapis": "^144.0.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
