fix: 修复Nginx配置以符合宝塔面板要求
- 将error_page 404移到ERROR-PAGE-START标记内
- 避免触发宝塔面板的配置保护机制

--- a/scripts/nginx-admin-xinghun-info-complete.conf
+++ b/scripts/nginx-admin-xinghun-info-complete.conf
@@ -27,7 +27,10 @@ server {
     error_page 497  https://$host$request_uri;
     #SSL-END
 
+    #ERROR-PAGE-START 错误页配置
     error_page 404 /404.html;
+    #ERROR-PAGE-END
+    
     include /www/server/panel/vhost/rewrite/admin.xinghun.info.conf;
 
     # ========== Next.js静态资源配置 - 必须在 location / 之前，按优先级排序 ==========
